Revision history for Yakuake::Sessions

0.3.3     2013-04-28 23:49:06
          - Stopped Treptow CPAN Testing - 7ec294fe-b005-11e2-91e1-3039f74438b4
          - Updated POD
          - Updated POD

0.2.8     2013-04-22 19:55:10
          - Fixed version number in yakuake_session
          - Author tests now detect using env variable
          - Improved synopsis
          - Added dist.ini to list of project files

0.1.6     2013-04-16 23:49:35
          - Updated documentation
          - Updated inc::Bob to v1.12
          - Updated .gitpre-commit to use global revision number

0.1       2012-11-04 03:43:11
          - Initial Release