@@ -1,9 +1,9 @@
-# @(#)Ident: Build.PL 2013-04-26 19:47 pjf ;
+# @(#)Ident: Build.PL 2013-04-29 15:30 pjf ;
 
 use strict;
 use warnings;
 use inc::Bob; # Module::Build subclass
-use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev: 3 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev: 4 $ =~ /\d+/gmx );
 
 Bob->new( {
    module    => q(Yakuake::Sessions),
@@ -11,8 +11,8 @@ Bob->new( {
    requires  => {
       'perl'             => 5.010,
       'version'          => 0.77,
-      'Class::Usul'      => q(0.15.0),
-      'File::DataClass'  => q(0.16.0), },
+      'Class::Usul'      => q(0.16.0),
+      'File::DataClass'  => q(0.17.0), },
    recommends            => {
       'App::cpanminus'   => 1.6005,
       'Pod::Markdown'    => 1.322, },
